jdk23: proc:full